--- a/i18n/locales/arabic/links.json
+++ b/i18n/locales/arabic/links.json
@@ -1,7 +1,7 @@
 {
   "forum": "https://forum.freecodecamp.org/",
   "donate": "https://www.freecodecamp.org/donate/",
-  "banner": "https://www.freecodecamp.org/",
+  "banner": "https://chat.freecodecamp.org/home",
   "learn-to-code-cta": "https://www.freecodecamp.org/learn/",
   "twitter": "https://twitter.com/freeCodeCampAR",
   "footer": {
