feat(i18n): add Arabic localization (#184)
* Update links.json

changed twitter link to point to Arabic account

* Update meta-tags.json

added arabic keywords and translated the description to arabic

* Update translations.json

translated the file to araic

* Update meta-tags.json

translated the title to arabic

* Update links.json

changed the banner link  to  point to chat

--- a/i18n/locales/arabic/links.json
+++ b/i18n/locales/arabic/links.json
@@ -1,9 +1,9 @@
 {
   "forum": "https://forum.freecodecamp.org/",
   "donate": "https://www.freecodecamp.org/donate/",
-  "banner": "https://www.freecodecamp.org/",
+  "banner": "https://chat.freecodecamp.org/home",
   "learn-to-code-cta": "https://www.freecodecamp.org/learn/",
-  "twitter": "https://twitter.com/freecodecamp",
+  "twitter": "https://twitter.com/freeCodeCampAR",
   "footer": {
     "about": "https://www.freecodecamp.org/news/about/",
     "support": "https://www.freecodecamp.org/news/support/",
