--- a/i18n/locales/arabic/meta-tags.json
+++ b/i18n/locales/arabic/meta-tags.json
@@ -1,5 +1,5 @@
 {
-  "title": "freeCodeCamp Programming Tutorials: Python, JavaScript, Git & More",
-  "keywords": "freeCodeCamp, programming, front-end, programmer, article, regular expressions, Python, JavaScript, AWS, JSON, HTML, CSS, Bootstrap, React, Vue, Webpack",
-  "description": "Browse thousands of programming tutorials written by experts. Learn Web Development, Data Science, DevOps, Security, and get developer career advice."
+  "title": "دروس برمجة من freeCodeCamp: بايثون، جافاسكريبت، Git، و المزيذ",
+  "keywords": "freeCodeCamp, programming, البرمجة, front-end, فرونت اند, programmer, مبرمج, article, regular expressions, Python, بايثون, JavaScript, جافاسكريبت, AWS, JSON, HTML, CSS, Bootstrap, React, Vue, Webpack",
+  "description": "تصفح الآلاف من دروس البرمجة التي كتبها الخبراء. تعلم تطوير الويب ، وعلوم البيانات ، و DevOps ، والامن السيبراني ، واحصل على المشورة المهنية للمطورين."
 }
