fix: Italian meta description

--- a/i18n/locales/italian/meta-tags.json
+++ b/i18n/locales/italian/meta-tags.json
@@ -1,5 +1,5 @@
 {
   "title": "freeCodeCamp.org",
   "keywords": "freeCodeCamp, programmazione, front-end, programmatore, articolo, espressioni regolari, Python, JavaScript, AWS, JSON, HTML, CSS, Bootstrap, React, Vue, Webpack",
-  "description": "Aprenda a codificar - de graça. Tutoriais de programação em Python, JavaScript, Linux e muito mais."
+  "description": "Impara a programmare gratuitamente! Tutorial di programmazione su Python, JavaScript, Linux e molto altro."
 }
