--- a/i18n/locales/italian/trending.json
+++ b/i18n/locales/italian/trending.json
@@ -1,62 +1,62 @@
 {
-  "article0title": "Big O Notation",
-  "article0link": "https://www.freecodecamp.org/news/big-o-notation-examples-time-complexity-explained/",
-  "article1title": "SQL Outer Join",
-  "article1link": "https://www.freecodecamp.org/news/sql-outer-join-tutorial-with-example-syntax/",
-  "article2title": "Python For Loop",
-  "article2link": "https://www.freecodecamp.org/news/python-for-loop-for-i-in-range-example/",
-  "article3title": "What is JavaScript?",
-  "article3link": "https://www.freecodecamp.org/news/what-is-javascript-definition-of-js/",
-  "article4title": "Learn How To Code",
-  "article4link": "https://www.freecodecamp.org/news/how-to/",
-  "article5title": "Chrome Bookmarks",
-  "article5link": "https://www.freecodecamp.org/news/chrome-bookmarks-location-guide-how-to-delete-or-recover-a-bookmark/",
-  "article6title": "Concatenate Excel",
-  "article6link": "https://www.freecodecamp.org/news/concatenate-in-excel-how-to-combine-text-and-concat-strings/",
-  "article7title": "C# String to Int",
-  "article7link": "https://www.freecodecamp.org/news/how-to-convert-a-string-to-an-int-in-c-tutorial-with-example-code/",
-  "article8title": "Git Switch Branch",
-  "article8link": "https://www.freecodecamp.org/news/git-switch-branch/",
-  "article9title": "JavaScript Splice",
-  "article9link": "https://www.freecodecamp.org/news/javascript-splice-how-to-use-the-splice-js-array-method/",
-  "article10title": "HTML Link",
-  "article10link": "https://www.freecodecamp.org/news/html-button-link-code-examples-how-to-make-html-hyperlinks-using-the-href-attribute-on-tags/",
-  "article11title": "Bayes Rule",
-  "article11link": "https://www.freecodecamp.org/news/bayes-rule-explained/",
-  "article12title": "Python Map",
-  "article12link": "https://www.freecodecamp.org/news/python-map-function-how-to-map-a-list-in-python-3-0-with-example-code/",
-  "article13title": "HTML Italics",
-  "article13link": "https://www.freecodecamp.org/news/html-italics-tutorial-how-to-make-text-italic-with-the-i-tag/",
-  "article14title": "Python SQL",
-  "article14link": "https://www.freecodecamp.org/news/python-sql-how-to-use-sql-databases-with-python/",
-  "article15title": "HTML Bold",
-  "article15link": "https://www.freecodecamp.org/news/html-bold-text-tutorial-how-to-use-the-b-tag/",
-  "article16title": "GraphQL VS Rest",
-  "article16link": "https://www.freecodecamp.org/news/graphql-vs-rest-benefits-and-code-example-comparisons/",
-  "article17title": "If Function Excel",
-  "article17link": "https://www.freecodecamp.org/news/if-function-excel-tutorial-and-how-to-do-multiple-if-statements-in-excel/",
-  "article18title": "HTML List",
-  "article18link": "https://www.freecodecamp.org/news/html-list-how-to-use-bullet-points-ordered-and-unordered-lists/",
-  "article19title": "Wav File",
-  "article19link": "https://www.freecodecamp.org/news/wav-file-format-how-to-open-a-wav-and-convert-wavs-to-mp3/",
-  "article20title": "Model View Controller ",
-  "article20link": "https://www.freecodecamp.org/news/the-model-view-controller-pattern-mvc-architecture-and-frameworks-explained/",
-  "article21title": "Git Checkout Remote Branch",
-  "article21link": "https://www.freecodecamp.org/news/git-checkout-remote-branch-tutorial/",
-  "article22title": "Insert Checkbox in Word",
-  "article22link": "https://www.freecodecamp.org/news/how-to-insert-a-checkbox-in-word/",
-  "article23title": "Find and Replace in Word",
-  "article23link": "https://www.freecodecamp.org/news/find-and-replace-in-word-a-microsoft-office-tutorial/",
-  "article24title": "C Programming Language",
-  "article24link": "https://www.freecodecamp.org/news/what-is-the-c-programming-language-beginner-tutorial/",
-  "article25title": "Subnet Cheat Sheet",
-  "article25link": "https://www.freecodecamp.org/news/subnet-cheat-sheet-24-subnet-mask-30-26-27-29-and-other-ip-address-cidr-network-references/",
-  "article26title": "String to Char Array Java",
-  "article26link": "https://www.freecodecamp.org/news/string-to-char-array-java-tutorial/",
-  "article27title": "JavaScript Append to Array",
-  "article27link": "https://www.freecodecamp.org/news/javascript-append-to-array-a-js-guide-to-the-push-method-2/",
-  "article28title": "Add Page Numbers in Word",
-  "article28link": "https://www.freecodecamp.org/news/page-numbers-in-word-tutorial-how-to-insert-a-page-number-in-microsoft-word/",
-  "article29title": "JavaScript Projects",
-  "article29link": "https://www.freecodecamp.org/news/javascript-projects-for-beginners/"
+  "article0title": "Variabili DotEnv",
+  "article0link": "https://www.freecodecamp.org/italian/news/come-utilizzare-le-variabili-di-ambiente-del-nodo-con-un-file-dotenv-per-node-js-e-npm/",
+  "article1title": "40 progetti JS",
+  "article1link": "https://www.freecodecamp.org/italian/news/40-progetti-in-javascript-per-principianti-idee-facili-per-iniziare-a-programmare-js/",
+  "article2title": "Web3 spiegato",
+  "article2link": "https://www.freecodecamp.org/italian/news/cose-il-web3-spiegazione-dellinternet-decentralizzato-del-futuro/",
+  "article3title": "C Guida principianti",
+  "article3link": "https://www.freecodecamp.org/italian/news/manuale-c-per-principianti-impara-le-basi-del-linguaggio-di-programmazione-c-in-poche-ore/",
+  "article4title": "ES6+ in NodeJS",
+  "article4link": "https://www.freecodecamp.org/italian/news/come-abilitare-la-sintassi-es6-e-oltre-con-node-ed-express/",
+  "article5title": "Blockchain spiegato",
+  "article5link": "https://www.freecodecamp.org/italian/news/cose-blockchain-e-come-funziona/",
+  "article6title": "HTML onclick",
+  "article6link": "https://www.freecodecamp.org/italian/news/html-button-onclick-tutorial-sullevento-click-in-javascript/",
+  "article7title": "Differenza Var Let Const",
+  "article7link": "https://www.freecodecamp.org/italian/news/var-let-const-differenza/",
+  "article8title": "Map Reduce Filter",
+  "article8link": "https://www.freecodecamp.org/italian/news/javascript-map-reduce-e-filter-funzioni-di-array-js-spiegate-con-esempi-di-codice/",
+  "article9title": "C defin. formato",
+  "article9link": "https://www.freecodecamp.org/italian/news/definitori-di-formato-in-c/",
+  "article10title": "SVG in CSS e HTML",
+  "article10link": "https://www.freecodecamp.org/italian/news/usare-immagini-svg-in-css-e-html/",
+  "article11title": "Elenco collegato JS",
+  "article11link": "https://www.freecodecamp.org/italian/news/come-implementare-un-elenco-collegato-in-javascript/",
+  "article12title": "TDZ e hoisting JS",
+  "article12link": "https://www.freecodecamp.org/italian/news/zona-morta-temporale-tdz-e-sollevamento-in-javascript-spiegazione-con-esempi/",
+  "article13title": "Sfide programmazione",
+  "article13link": "https://www.freecodecamp.org/italian/news/10-siti-sfide-programmazione-piu-popolari/",
+  "article14title": "Richiedere moduli JS",
+  "article14link": "https://www.freecodecamp.org/italian/news/richiedere-moduli-in-node-js-tutto-cio-che-devi-sapere/",
+  "article15title": "Git Clone Branch",
+  "article15link": "https://www.freecodecamp.org/italian/news/git-clone-branch/",
+  "article16title": "Centrare con CSS",
+  "article16link": "https://www.freecodecamp.org/italian/news/centrare-con-css/",
+  "article17title": "JS includes",
+  "article17link": "https://www.freecodecamp.org/italian/news/metodo-includes/",
+  "article18title": "Debounce JS",
+  "article18link": "https://www.freecodecamp.org/italian/news/debounce-come-ritardare-una-funzione-in-javascript-esempio-js-es6/",
+  "article19title": "JSON Stringify",
+  "article19link": "https://www.freecodecamp.org/italian/news/esempio-json-stringify-come-analizzare-un-oggetto-json-con-js/",
+  "article20title": "Verifica palindromi JS",
+  "article20link": "https://www.freecodecamp.org/italian/news/due-modi-per-verificare-la-presenza-di-palindromi-in-javascript/",
+  "article21title": "Radice quadrata di un numero",
+  "article21link": "https://www.freecodecamp.org/italian/news/calcolare-radice-quadrata/",
+  "article22title": "JS fetch API",
+  "article22link": "https://www.freecodecamp.org/italian/news/api-fetch-javascript/",
+  "article23title": "Convalida moduli JS HTML",
+  "article23link": "https://www.freecodecamp.org/italian/news/convalida-dati-moduli/",
+  "article24title": "Richieste HTTP JS",
+  "article24link": "https://www.freecodecamp.org/italian/news/ecco-i-modi-piu-popolari-per-effettuare-una-richiesta-http-in-javascript/",
+  "article25title": "Discord Bot JS",
+  "article25link": "https://www.freecodecamp.org/italian/news/bot-discord-javascript/",
+  "article26title": "C++ std::string",
+  "article26link": "https://www.freecodecamp.org/italian/news/stringa-in-cpp-std-string-esempio-in-cpp/",
+  "article27title": "JS e CSS da CDN pubblico",
+  "article27link": "https://www.freecodecamp.org/italian/news/come-importare-javascript-e-css-da-una-cdn-pubblica/",
+  "article28title": "Async/Await in JS",
+  "article28link": "https://www.freecodecamp.org/italian/news/async-await-javascript-tutorial-come-attendere-il-completamento-di-una-funzione-in-js/",
+  "article29title": "Pulsante HTML come link",
+  "article29link": "https://www.freecodecamp.org/italian/news/come-creare-un-pulsante-che-si-comporta-come-un-link/"
 }
