--- a/config/i18n/locales/chinese/links.json
+++ b/config/i18n/locales/chinese/links.json
@@ -1,17 +1,17 @@
 {
-  "forum": "https://chinese.freecodecamp.org/forum/",
-  "donate": "https://chinese.freecodecamp.org/donate/",
+  "forum": "https://forum.freecodecamp.org/c/chinese/533",
+  "donate": "https://www.freecodecamp.org/chinese/donate",
   "banner": {
-    "default": "https://chinese.freecodecamp.org/",
-    "authenticated": "https://chinese.freecodecamp.org/donate",
-    "authenticated-donor": "https://chinese.freecodecamp.org/news/how-to-donate-to-free-code-camp/"
+    "default": "https://www.freecodecamp.org/chinese/",
+    "authenticated": "https://www.freecodecamp.org/chinese/donate",
+    "authenticated-donor": "https://www.freecodecamp.org/chinese/news/how-to-donate-to-free-code-camp/"
   },
-  "learn-to-code-cta": "https://chinese.freecodecamp.org/learn/",
+  "learn-to-code-cta": "https://www.freecodecamp.org/chinese/learn/",
   "twitter": "https://twitter.com/freeCodeCampZH",
   "footer": {
-    "about": "https://chinese.freecodecamp.org/news/about/",
-    "support": "https://chinese.freecodecamp.org/news/support/",
-    "honesty": "https://chinese.freecodecamp.org/news/academic-honesty/",
-    "coc": "https://chinese.freecodecamp.org/news/code-of-conduct/"
+    "about": "https://www.freecodecamp.org/chinese/news/about/",
+    "support": "https://www.freecodecamp.org/chinese/news/support/",
+    "honesty": "https://www.freecodecamp.org/chinese/news/academic-honesty/",
+    "coc": "https://www.freecodecamp.org/chinese/news/code-of-conduct/"
   }
 }
