Translated to UR: meta-tags.json & translations.json

--- a/i18n/locales/urdu/meta-tags.json
+++ b/i18n/locales/urdu/meta-tags.json
@@ -1,5 +1,6 @@
 {
   "title": "freeCodeCamp Programming Tutorials: Python, JavaScript, Git & More",
   "keywords": "freeCodeCamp, programming, front-end, programmer, article, regular expressions, Python, JavaScript, AWS, JSON, HTML, CSS, Bootstrap, React, Vue, Webpack",
-  "description": "Browse thousands of programming tutorials written by experts. Learn Web Development, Data Science, DevOps, Security, and get developer career advice."
+  "description": "ایکسپرٹس کے لکھے ہوۓ ہزاروں programming ٹٹوریلس کو browse کریں. کیریئر ایڈوائس کے ساتھ، . ویب development، data سائنس، DevOps اور سیکورٹی سیکھیں. "
 }
+
