Removed a grammatical error

--- a/i18n/locales/urdu/translations.json
+++ b/i18n/locales/urdu/translations.json
@@ -30,7 +30,7 @@
     "go-to-front-page": "فرنٹ page پہ جائیں"
   },
   "social-row": {
-    "author-has-twitter": "اگر آپ نیں آخر تک پڑھ لیا ہے، تو مصنف کو شکریہ کریں.. {{ <0> }} شکریہ کا Tweet کریں {{ </0> }}",
+    "author-has-twitter": "اگر آپ نیں آخر تک پڑھ لیا ہے، تو مصنف کو شکریہ کریں. {{ <0> }} شکریہ کا Tweet کریں {{ </0> }}",
     "author-no-twitter": " {{ <0> }}Tweet  کریں{{ </0> }} اگر یہ آرٹیکل مفید لگا تو ",
     "default-tweet": "آپ کا بہت شکریہ، آپ نیں یہ آرٹیکل لکھا.  {{ twitter }} ."
 
