--- a/i18n/locales/italian/translations.json
+++ b/i18n/locales/italian/translations.json
@@ -12,6 +12,8 @@
     "no-tutorials": "Nessun articolo trovato"
   },
   "banner": "{{ <0> }}Contribuisci anche tu a freeCodeCamp!{{ </0> }}",
+  "banner-authenticated": "Supporta la nostra no-profit e la nostra missione. {{ <0> }}Dona a freeCodeCamp.org{{ </0> }}.",
+  "banner-authenticated-donor": "Grazie per supportare freeCodeCamp con le {{ <0> }}tue donazioni{{ </0> }}.",
   "author": {
     "no-posts": "Non ci sono articoli",
     "one-post": "1 articolo",
