--- a/i18n/locales/japanese/links.json
+++ b/i18n/locales/japanese/links.json
@@ -2,6 +2,8 @@
   "forum": "https://forum.freecodecamp.org/c/japanese/552",
   "donate": "https://www.freecodecamp.org/japanese/donate/",
   "banner": "https://www.freecodecamp.org/japanese/",
+  "banner-authenticated": "https://www.freecodecamp.org/japanese/donate",
+  "banner-authenticated-donor": "https://www.freecodecamp.org/news/how-to-donate-to-free-code-camp/",
   "learn-to-code-cta": "https://www.freecodecamp.org/japanese/learn/",
   "twitter": "https://twitter.com/freecodecampJA",
   "footer": {
