--- a/i18n/locales/portuguese/links.json
+++ b/i18n/locales/portuguese/links.json
@@ -2,6 +2,8 @@
   "forum": "https://forum.freecodecamp.org/c/portugues/534",
   "donate": "https://www.freecodecamp.org/portuguese/donate/",
   "banner": "https://chat.freecodecamp.org/home",
+  "banner-authenticated": "https://www.freecodecamp.org/portuguese/donate",
+  "banner-authenticated-donor": "https://www.freecodecamp.org/news/how-to-donate-to-free-code-camp/",
   "learn-to-code-cta": "https://www.freecodecamp.org/portuguese/learn/",
   "twitter": "https://twitter.com/freecodecampPT",
   "footer": {
