--- a/i18n/locales/portuguese/translations.json
+++ b/i18n/locales/portuguese/translations.json
@@ -12,6 +12,8 @@
     "no-tutorials": "Não foram encontrados tutoriais"
   },
   "banner": "<span>Converse com outros desenvolvedores em português</span>",
+  "banner-authenticated": "Apoie nossa organização sem fins lucrativos e nossa missão. {{ <0> }}Faça sua doação para o freeCodeCamp.org{{ </0> }}.",
+  "banner-authenticated-donor": "Obrigado por apoiar o freeCodeCamp com {{ <0> }}suas doações{{ </0> }}.",
   "author": {
     "no-posts": "Não há artigos",
     "one-post": "1 artigo",
