--- a/i18n/locales/urdu/translations.json
+++ b/i18n/locales/urdu/translations.json
@@ -12,6 +12,8 @@
     "no-tutorials": "No tutorials found"
   },
   "banner": "Learn to code — {{ <0> }}free 3,000-hour curriculum{{ </0> }}",
+  "banner-authenticated": "ہمارے non profit mission کی حمایت کریں. {{ <0> }}freecodecamp کو عطیہ دیں{{ </0> }}",
+  "banner-authenticated-donor": "اپنے {{ </0> }}عطیات{{ <0> }} کے ذریعے freecodecamp کی حمایت کرنے کا شکریہ.",
   "author": {
     "no-posts": "No posts",
     "one-post": "1 post",
