--- a/i18n/locales/espanol/links.json
+++ b/i18n/locales/espanol/links.json
@@ -1,9 +1,11 @@
 {
   "forum": "https://forum.freecodecamp.org/c/espanol/522",
   "donate": "https://www.freecodecamp.org/espanol/donate/",
-  "banner": "https://chat.freecodecamp.org/home",
-  "banner-authenticated": "https://www.freecodecamp.org/espanol/donate",
-  "banner-authenticated-donor": "https://www.freecodecamp.org/espanol/news/como-donar-a-freecodecamp-org-formas-de-dar-y-apoyar-la-mision/",
+  "banner": {
+    "default": "https://www.freecodecamp.org/",
+    "authenticated": "https://www.freecodecamp.org/donate",
+    "authenticated-donor": "https://www.freecodecamp.org/news/how-to-donate-to-free-code-camp/"
+  },
   "learn-to-code-cta": "https://www.freecodecamp.org/espanol/learn/",
   "twitter": "https://twitter.com/freecodecampes",
   "footer": {
