fix: restructure translations

--- a/i18n/locales/bengali/links.json
+++ b/i18n/locales/bengali/links.json
@@ -1,9 +1,11 @@
 {
   "forum": "https://forum.freecodecamp.org/",
   "donate": "https://www.freecodecamp.org/donate/",
-  "banner": "https://www.freecodecamp.org/",
-  "banner-authenticated": "https://www.freecodecamp.org/donate",
-  "banner-authenticated-donor": "https://www.freecodecamp.org/news/how-to-donate-to-free-code-camp/",
+  "banner": {
+    "default": "https://www.freecodecamp.org/",
+    "authenticated": "https://www.freecodecamp.org/donate",
+    "authenticated-donor": "https://www.freecodecamp.org/news/how-to-donate-to-free-code-camp/"
+  },
   "learn-to-code-cta": "https://www.freecodecamp.org/learn/",
   "twitter": "https://twitter.com/freecodecamp",
   "footer": {
