--- a/i18n/locales/espanol/links.json
+++ b/i18n/locales/espanol/links.json
@@ -2,9 +2,9 @@
   "forum": "https://forum.freecodecamp.org/c/espanol/522",
   "donate": "https://www.freecodecamp.org/espanol/donate/",
   "banner": {
-    "default": "https://www.freecodecamp.org/",
-    "authenticated": "https://www.freecodecamp.org/donate",
-    "authenticated-donor": "https://www.freecodecamp.org/news/how-to-donate-to-free-code-camp/"
+    "default": "https://www.freecodecamp.org/espanol",
+    "authenticated": "https://www.freecodecamp.org/espanol/donate",
+    "authenticated-donor": "https://www.freecodecamp.org/espanol/news/how-to-donate-to-free-code-camp/"
   },
   "learn-to-code-cta": "https://www.freecodecamp.org/espanol/learn/",
   "twitter": "https://twitter.com/freecodecampes",
