--- a/i18n/locales/portuguese/translations.json
+++ b/i18n/locales/portuguese/translations.json
@@ -12,7 +12,7 @@
     "no-tutorials": "Não foram encontrados tutoriais"
   },
   "banner": {
-    "default": "<span>Converse com outros desenvolvedores em português</span>",
+    "default": "{{ <0> }}Converse com outros desenvolvedores em português{{ </0> }}",
     "authenticated": "Apoie nossa organização sem fins lucrativos e nossa missão. {{ <0> }}Faça sua doação para o freeCodeCamp.org{{ </0> }}.",
     "authenticated-donor": "Obrigado por apoiar o freeCodeCamp com {{ <0> }}suas doações{{ </0> }}."
   },
