feat: load banner conditionally (#269)
* feat: load banner conditionally

* fix: clean up

* feat: add banner variations

* feat: add i18n strings

* Apply suggestions from code review

Co-authored-by: Kristofer Koishigawa <scissorsneedfoodtoo@gmail.com>

* fix: restructure translations

* Apply suggestions from code review v2

Co-authored-by: Kristofer Koishigawa <scissorsneedfoodtoo@gmail.com>

Co-authored-by: Kristofer Koishigawa <scissorsneedfoodtoo@gmail.com>

--- a/i18n/locales/arabic/links.json
+++ b/i18n/locales/arabic/links.json
@@ -1,7 +1,11 @@
 {
   "forum": "https://forum.freecodecamp.org/",
   "donate": "https://www.freecodecamp.org/donate/",
-  "banner": "https://chat.freecodecamp.org/home",
+  "banner": {
+    "default": "https://chat.freecodecamp.org/home",
+    "authenticated": "https://www.freecodecamp.org/donate",
+    "authenticated-donor": "https://www.freecodecamp.org/news/how-to-donate-to-free-code-camp/"
+  },
   "learn-to-code-cta": "https://www.freecodecamp.org/learn/",
   "twitter": "https://twitter.com/freeCodeCampAR",
   "footer": {
