--- a/i18n/locales/arabic/translations.json
+++ b/i18n/locales/arabic/translations.json
@@ -11,7 +11,11 @@
     "see-results": "مشاهدة كافة النتائج لـ {{ searchQuery }}",
     "no-tutorials": "لم يتم العثور على دروس"
   },
-  "banner": "{{ <0> }}الدردشة مع المطورين الآخرين باللغة العربية{{ </0> }}",
+  "banner": {
+    "default": "{{ <0> }}الدردشة مع المطورين الآخرين باللغة العربية{{ </0> }}",
+    "authenticated": "قم بدعم مهمتنا و منظمتنا الغير ربحية. {{ <0> }}تبرع إلى freeCodeCamp.org{{ </0> }}.",
+    "authenticated-donor": "شكرًا لك على دعم freeCodeCamp {{ <0> }}من خلال {{ <0/> }}تبرعاتك."
+  },
   "author": {
     "no-posts": "لا يوجد مقالات",
     "one-post": "مقال ١",
