--- a/i18n/locales/urdu/links.json
+++ b/i18n/locales/urdu/links.json
@@ -7,7 +7,7 @@
     "authenticated-donor": "https://www.freecodecamp.org/news/how-to-donate-to-free-code-camp/"
   },
   "learn-to-code-cta": "https://www.freecodecamp.org/learn/",
-  "twitter": "https://twitter.com/freecodecamp",
+  "twitter": "https://twitter.com/freeCodeCampUR",
   "footer": {
     "about": "https://www.freecodecamp.org/news/about/",
     "support": "https://www.freecodecamp.org/news/support/",
