fix(i18n): Typo correction in translations.json
Co-authored-by: Kristofer Koishigawa <scissorsneedfoodtoo@gmail.com>

--- a/i18n/locales/urdu/translations.json
+++ b/i18n/locales/urdu/translations.json
@@ -13,8 +13,8 @@
   },
   "banner": {
     "default": "{{ <0> }}کوڈ کرنا سیکھیں 3000 گھنٹوں کا مفت نصاب{{ </0> }}",
-    "authenticated": "ہمارے non profit mission کی حمایت کریں. {{ <0> }}freecodecamp کو عطیہ دیں{{ </0> }}",
-    "authenticated-donor": "اپنے {{ </0> }}عطیات{{ <0> }} کے ذریعے freecodecamp کی حمایت کرنے کا شکریہ."
+    "authenticated": "ہمارے non profit mission کی حمایت کریں. {{ <0> }}freeCodeCamp کو عطیہ دیں{{ </0> }}",
+    "authenticated-donor": "اپنے {{ </0> }}عطیات{{ <0> }} کے ذریعے freeCodeCamp کی حمایت کرنے کا شکریہ."
   },
   "author": {
     "no-posts": "کوئی post نہیں",
