--- a/i18n/locales/espanol/translations.json
+++ b/i18n/locales/espanol/translations.json
@@ -40,15 +40,26 @@
   "localization-meta": {
     "roles": {
       "author": "autor",
-      "translator": "traductor"
+      "translator": "traducido por"
     },
-    "card-name": "{{ role }}: {{ name }}",
-    "languages": {
-      "en": "Inglés",
-      "es": "Español",
-      "zh": "Chino",
-      "pt-br": "Portugués",
-      "it": "Italiano"
+    "bylines": {
+      "author": "{{ role }}: {{ name }} ({{ locale }})",
+      "translator": "{{ role }}: {{ name }}"
+    },
+    "info": {
+      "original-article": "{{ <0> }}Artículo original:{{ </0> }} {{ title }} por {{ author }}",
+      "translated-by": "{{ <0> }}Traducido y adaptado por:{{ </0> }} {{ translator }}"
+    },
+    "locales": {
+      "english": "inglés",
+      "espanol": "español",
+      "chinese": "chino",
+      "portuguese": "portugués",
+      "italian": "italiano",
+      "japanese": "japonés",
+      "arabic": "árabe",
+      "urdu": "urdu",
+      "bengali": "bengalí"
     }
   },
   "embed-title": "Contenido incrustado",
