--- a/i18n/locales/bengali/translations.json
+++ b/i18n/locales/bengali/translations.json
@@ -42,13 +42,24 @@
       "author": "author",
       "translator": "translator"
     },
-    "card-name": "{{ role }}: {{ name }}",
-    "languages": {
-      "en": "English",
-      "es": "Spanish",
-      "zh": "Chinese",
-      "pt-br": "Portuguese",
-      "it": "Italian"
+    "bylines": {
+      "author": "{{ role }}: {{ name }} ({{ locale }})",
+      "translator": "{{ role }}: {{ name }}"
+    },
+    "info": {
+      "original-article": "{{ <0> }}Original article:{{ </0> }} {{ title }} by {{ author }}",
+      "translated-by": "{{ <0> }}Translated by:{{ </0> }} {{ translator }}"
+    },
+    "locales": {
+      "english": "English",
+      "espanol": "Spanish",
+      "chinese": "Chinese",
+      "portuguese": "Portuguese",
+      "italian": "Italian",
+      "japanese": "Japanese",
+      "arabic": "Arabic",
+      "urdu": "Urdu",
+      "bengali": "Bengali"
     }
   },
   "embed-title": "Embedded content",
