--- a/i18n/locales/japanese/translations.json
+++ b/i18n/locales/japanese/translations.json
@@ -42,13 +42,24 @@
       "author": "著者",
       "translator": "翻訳"
     },
-    "card-name": "{{ role }}: {{ name }}",
-    "languages": {
-      "en": "英語",
-      "es": "スペイン語",
-      "zh": "中国語",
-      "pt-br": "ポルトガル語",
-      "it": "イタリア語"
+    "bylines": {
+      "author": "{{ role }}: {{ name }} ({{ locale }})",
+      "translator": "{{ role }}: {{ name }}"
+    },
+    "info": {
+      "original-article": "{{ <0> }}原文:{{ </0> }} {{ title }} ({{ author }})",
+      "translated-by": "{{ <0> }}翻訳・翻案:{{ </0> }} {{ translator }}"
+    },
+    "locales": {
+      "english": "英語",
+      "espanol": "スペイン語",
+      "chinese": "中国語",
+      "portuguese": "ポルトガル語",
+      "italian": "イタリア語",
+      "japanese": "日本語",
+      "arabic": "アラビア語",
+      "urdu": "ウルドゥー語",
+      "bengali": "ベンガル語"
     }
   },
   "embed-title": "埋め込まれたコンテンツ",
