--- a/i18n/locales/portuguese/translations.json
+++ b/i18n/locales/portuguese/translations.json
@@ -42,13 +42,24 @@
       "author": "autor",
       "translator": "tradutor"
     },
-    "card-name": "{{ role }}: {{ name }}",
-    "languages": {
-      "en": "Inglês",
-      "es": "Espanhol",
-      "zh": "Chinês",
-      "pt-br": "Português",
-      "it": "Italiano"
+    "bylines": {
+      "author": "{{ role }}: {{ name }} (em {{ locale }})",
+      "translator": "{{ role }}: {{ name }}"
+    },
+    "info": {
+      "original-article": "{{ <0> }}Artigo original:{{ </0> }} {{ title }}, escrito por {{ author }}",
+      "translated-by": "{{ <0> }}Traduzido e adaptado por:{{ </0> }} {{ translator }}"
+    },
+    "locales": {
+      "english": "inglês",
+      "espanol": "espanhol",
+      "chinese": "chinês",
+      "portuguese": "português",
+      "italian": "italiano",
+      "japanese": "japonês",
+      "arabic": "árabe",
+      "urdu": "urdu",
+      "bengali": "bengali"
     }
   },
   "embed-title": "Conteúdo incorporado",
