--- a/i18n/locales/english/translations.json
+++ b/i18n/locales/english/translations.json
@@ -20,7 +20,7 @@
     "no-posts": "No posts",
     "one-post": "1 post",
     "multiple-posts": "{{ postCount }} posts",
-    "read-more": "Read {{ <0> }}more posts{{ </0> }} by this {{ role }}."
+    "read-more": "Read {{ <0> }}more posts{{ </0> }}."
   },
   "tag": {
     "no-posts": "A collection of posts",
@@ -37,16 +37,12 @@
     "default-tweet": "Thank you {{ twitter }} for writing this helpful article."
   },
   "learn-to-code-cta": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers. {{ <0> }}Get started{{ </0> }}",
-  "localization-meta": {
+  "original-author-translator": {
     "roles": {
-      "author": "author",
-      "translator": "translator"
+      "author": "Author: {{ name }} ({{ locale }})",
+      "translator": "Translator: {{ name }}"
     },
-    "bylines": {
-      "author": "{{ role }}: {{ name }} ({{ locale }})",
-      "translator": "{{ role }}: {{ name }}"
-    },
-    "info": {
+    "intro": {
       "original-article": "{{ <0> }}Original article:{{ </0> }} {{ title }} by {{ author }}",
       "translated-by": "{{ <0> }}Translated by:{{ </0> }} {{ translator }}"
     },
