--- a/i18n/locales/english/translations.json
+++ b/i18n/locales/english/translations.json
@@ -32,9 +32,11 @@
     "go-to-front-page": "Go to the front page"
   },
   "social-row": {
-    "author-has-twitter": "If you read this far, tweet to the author to show them you care. {{ <0> }}Tweet a thanks{{ </0> }}",
-    "author-no-twitter": "If this article was helpful, {{ <0> }}tweet it{{ </0> }}.",
-    "default-tweet": "Thank you {{ twitter }} for writing this helpful article."
+    "tweet-a-thanks": "If this article was helpful, {{ <0> }}tweet a thanks{{ </0> }}.",
+    "tweets": {
+      "default": "Thank you {{ author }} for writing this helpful article.",
+      "translation": "Thank you {{ author }} for writing this helpful article, and {{ translator }} for translating it."
+    }
   },
   "learn-to-code-cta": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers. {{ <0> }}Get started{{ </0> }}",
   "original-author-translator": {
@@ -42,7 +44,7 @@
       "author": "Author: {{ name }} ({{ locale }})",
       "translator": "Translator: {{ name }}"
     },
-    "intro": {
+    "details": {
       "original-article": "{{ <0> }}Original article:{{ </0> }} {{ title }} by {{ author }}",
       "translated-by": "{{ <0> }}Translated by:{{ </0> }} {{ translator }}"
     },
